docs(java): Codex·Gemini 리뷰 기반 11개 문서 팩트 정확성 개선